WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150124
[Win] Enforce launcher/library naming scheme
https://bugs.webkit.org/show_bug.cgi?id=150124
Summary
[Win] Enforce launcher/library naming scheme
Brent Fulgham
Reported
2015-10-14 10:08:16 PDT
There are several compilation units on Windows that have the same target name, differing only in file extension: MiniBrowser.exe and MiniBrowser.dll DumpRenderTree.exe and DumpRenderTree.dll This causes trouble with the debugging symbols, because both "MiniBrowser.exe" and "MiniBrowser.dll" want to produce "MiniBrowser.pdb" for their symbols. This creates a race condition during builds that results in one of the two sets of debugging symbols being lost, which causes problems with producing usable stack traces. To correct these, we will change the DLL build rules to generate "{Name}Lib.DLL", so that the build output will be: MiniBrowser.exe -> MiniBrowser.pdb MiniBrowserLib.dll -> MiniBrowserLib.pdb DumpRenderTree.exe -> DumpRenderTree.pdb DumpRenderTreeLib.exe -> DumpRenderTreeLib.pdb This should resolve these symbol loading issues and help us get usable stack traces.
Attachments
Patch
(7.86 KB, patch)
2015-10-14 16:52 PDT
,
Brent Fulgham
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brent Fulgham
Comment 1
2015-10-14 16:52:28 PDT
Created
attachment 263123
[details]
Patch
Alex Christensen
Comment 2
2015-10-14 16:58:55 PDT
Comment on
attachment 263123
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263123&action=review
> Tools/TestWebKitAPI/PlatformWin.cmake:118 > +set_target_properties(TestWebKitLib PROPERTIES OUTPUT_NAME "TestWebKitLib")
This line should no longer be necessary. The only reason it was necessary was because we wanted the dll to have a different name than the target, and that is no longer true. Same elsewhere in the patch.
Brent Fulgham
Comment 3
2015-10-14 17:07:55 PDT
Comment on
attachment 263123
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263123&action=review
>> Tools/TestWebKitAPI/PlatformWin.cmake:118 >> +set_target_properties(TestWebKitLib PROPERTIES OUTPUT_NAME "TestWebKitLib") > > This line should no longer be necessary. The only reason it was necessary was because we wanted the dll to have a different name than the target, and that is no longer true. > Same elsewhere in the patch.
Excellent! I'll revise the patch.
Brent Fulgham
Comment 4
2015-10-14 17:12:27 PDT
Committed
r191075
: <
http://trac.webkit.org/changeset/191075
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug