[Win] Enforce launcher/library naming scheme https://bugs.webkit.org/show_bug.cgi?id=150124

Reviewed by Alex Christensen.

Source/JavaScriptCore:

* JavaScriptCore.vcxproj/jsc/DLLLauncherMain.cpp: Look for
{name}Lib.dll instead of {name}.dll.
(wWinMain):
* shell/PlatformWin.cmake: Add 'Lib' suffix to DLLs.

Tools:

* DumpRenderTree/PlatformWin.cmake: Use 'Lib' suffix for DLLs.
* MiniBrowser/win/CMakeLists.txt: Ditto.
* TestWebKitAPI/PlatformWin.cmake: Ditto.
* win/DLLLauncher/DLLLauncherMain.cpp:
(wWinMain): Look for a DLL named {name}Lib.dll, rather than the
original {name}.dll.


Canonical link: https://commits.webkit.org/168280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191075 268f45cc-cd09-0410-ab3c-d52691b4dbfc