Source/JavaScriptCore/shell/PlatformWin.cmake
@@ -7,7 +7,6 @@ list(APPEND JSC_LIBRARIES
 
 target_link_libraries(jscLib ${JSC_LIBRARIES})
 set_target_properties(jscLib PROPERTIES FOLDER "JavaScriptCore")
-set_target_properties(jscLib PROPERTIES OUTPUT_NAME "jsc${DEBUG_SUFFIX}")
 
 if (${WTF_PLATFORM_WIN_CAIRO})
     add_definitions(-DWIN_CAIRO)
@@ -21,7 +20,6 @@ set(JSC_OUTPUT_NAME "jsc${DEBUG_SUFFIX}")
 
 add_library(testRegExpLib SHARED ../testRegExp.cpp)
 set_target_properties(testRegExpLib PROPERTIES FOLDER "JavaScriptCore")
-set_target_properties(testRegExpLib PROPERTIES OUTPUT_NAME "testRegExp${DEBUG_SUFFIX}")
 add_executable(testRegExp ${JSC_SOURCES})
 set_target_properties(testRegExp PROPERTIES OUTPUT_NAME "testRegExp${DEBUG_SUFFIX}")
 target_link_libraries(testRegExp shlwapi)
@@ -39,7 +37,6 @@ add_library(testapiLib SHARED
 set_source_files_properties(../API/tests/CustomGlobalObjectClassTest.c PROPERTIES COMPILE_FLAGS "/TP /MT")
 set_source_files_properties(../API/tests/testapi.c PROPERTIES COMPILE_FLAGS "/TP /MT")
 set_target_properties(testapiLib PROPERTIES FOLDER "JavaScriptCore")
-set_target_properties(testapiLib PROPERTIES OUTPUT_NAME "testapi${DEBUG_SUFFIX}")
 add_executable(testapi ${JSC_SOURCES})
 set_target_properties(testapi PROPERTIES OUTPUT_NAME "testapi${DEBUG_SUFFIX}")
 target_link_libraries(testapi shlwapi)
